syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "ServiceAccountGrpc";

service AccountGrpc {   

  // 1:一元调用:判断程序/网络是否启动
  rpc Activity (google.protobuf.Empty) returns (google.protobuf.Empty);
  // 2:加载用户信息
  rpc LoadUser(LoadUserReq) returns (google.protobuf.Empty);
  // 3:获取用户信息
  rpc GetUser(GetUserReq) returns(GetUserRes);
}

message LoadUserReq{ 
  repeated int64 user_id=1;
}

message GetUserReq{
  repeated int64 user_id=1;
};
message GetUserRes{
  string users=1;  
}